fixing alignment titles

--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -165,3 +165,15 @@
 .about-title {
   margin-top: 10vh;
 }
+
+.trainings-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.education-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
